k8s/helloservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloservice
  template:
    metadata:
      labels:
        app: helloservice
    spec:
      containers:
      - name: helloservice
        image: skmernacr.azurecr.io/helloservice
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: helloservice
spec:
  selector:
    app: helloservice
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
