k8s/profileservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profileservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profileservice
  template:
    metadata:
      labels:
        app: profileservice
    spec:
      containers:
      - name: profileservice
        image: skmernacr.azurecr.io/profileservice
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: profileservice
spec:
  selector:
    app: profileservice
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
