k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/helloservice
        pathType: Prefix
        backend:
          service:
            name: helloservice
            port:
              number: 3001
      - path: /api/profileservice
        pathType: Prefix
        backend:
          service:
            name: profileservice
            port:
              number: 3002
